# Iterative-Fiction

./: CMakeLists.txt  Command.cpp  Command.h  Display.cpp  Display.h  Passage.cpp  Passage.h  PassageTokenizer.cpp  PassageTokenizer.h  SectionToken.cpp  SectionToken.h  StoryTokenizer.cpp  StoryTokenizer.h  main.cpp  passagetokenizer.cpp  passagetokenizer.h
